-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 11, 13, 14
-
Component/s: hotspot
-
b17
-
aix
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8234075 | 11.0.6 | Arno Zeller | P4 | Resolved | Fixed | b04 |
We see asserts firing because of negative duration measurement on newer AIX running on Power9.
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/nightly/jdk/src/hotspot/share/gc/shared/weakProcessorPhaseTimes.cpp:136), pid=10879466, tid=1800
# assert(is_initialized_time(_total_time_sec)) failed: Total time not set: -0.000548
#
# JRE version: OpenJDK Runtime Environment (14.0.1) (fastdebug build 14.0.0.1-internal+0-adhoc.openjdk.jdk)
# Java VM: OpenJDK 64-Bit Server VM (fastdebug 14.0.0.1-internal+0-adhoc.openjdk.jdk, mixed mode, tiered, compressed oops, g1 gc, aix-ppc64)
# Core dump will be written. Default location: /jtreg_langtools_work/JTwork/jdk/javadoc/doclet/testSearchScript/TestSearchScript/core or core.10879466
#
# If you would like to submit a bug report, please visit:
# http://bugreport.java.com/bugreport/crash.jsp
#
--------------- S U M M A R Y ------------
Command Line: -Dtest.src=/testdata/jtreg/jtreg_test_14/test/langtools/jdk/javadoc/doclet/testSearchScript -Dtest.src.path=/testdata/jtreg/jtreg_test_14/test/langtools/jdk/javadoc/doclet/testSearchScript:/testdata/jtreg/jtreg_test_14/test/langtools/jdk/javadoc/lib -Dtest.classes=/jtreg_langtools_work/JTwork/classes/jdk/javadoc/doclet/testSearchScript/TestSearchScript.d -Dtest.class.path=/jtreg_langtools_work/JTwork/classes/jdk/javadoc/doclet/testSearchScript/TestSearchScript.d:/jtreg_langtools_work/JTwork/classes/jdk/javadoc/lib -Dtest.vm.opts=-Xmx768m -Djava.awt.headless=true -Djava.util.prefs.userRoot=/jtreg_langtools_work/tmp -Djava.io.tmpdir=/jtreg_langtools_work/tmp -ea -esa -Dtest.tool.vm.opts=-J-Xmx768m -J-Djava.awt.headless=true -J-Djava.util.prefs.userRoot=/jtreg_langtools_work/tmp -J-Djava.io.tmpdir=/jtreg_langtools_work/tmp -J-ea -J-esa -Dtest.compiler.opts= -Dtest.java.opts= -Dtest.jdk=/sapjvm_14 -Dcompile.jdk=/sapjvm_14 -Dtest.timeout.factor=6.0 -Dtest.root=/testdata/jtreg/jtreg_test_14/test/langtools -Dtest.modules=jdk.javadoc/jdk.javadoc.internal.tool -Dtest.nativepath=/testdata/jtreg/jtreg_test_14/test/jdk/jtreg/native --add-modules=jdk.javadoc --add-exports=jdk.javadoc/jdk.javadoc.internal.tool=ALL-UNNAMED -Xmx768m -Djava.awt.headless=true -Djava.util.prefs.userRoot=/jtreg_langtools_work/tmp -Djava.io.tmpdir=/jtreg_langtools_work/tmp -ea -esa -Djava.library.path=/testdata/jtreg/jtreg_test_14/test/jdk/jtreg/native com.sun.javatest.regtest.agent.MainWrapper /jtreg_langtools_work/JTwork/jdk/javadoc/doclet/testSearchScript/TestSearchScript.d/main.1.jta
Host: is3439, unknown, 32 cores, 64G, 2 7
Time: Mon Sep 16 00:32:02 2019 CEST elapsed time: 13 seconds (0d 0h 0m 13s)
--------------- T H R E A D ---------------
Current thread (0x000000011433c000): VMThread "VM Thread" [stack: 0x0000000114350000,0x000000011456e888] [id=1800]
Stack: [0x0000000114350000,0x000000011456e888], sp=0x000000011456d040, free space=2164k
No context given, using current context.
------ current frame:
iar: 0x09000000066554f4 libjvm.so::_ZN18AixNativeCallstack27print_callstack_for_contextEP12outputStreamPK10ucontext_tbPcm+0x954 (C++ saves_lr stores_bc gpr_saved:18 fixedparms:5 )
lr: 0x000000010074cada (unknown module)::(unknown function)+?
sp: 0x000000011456bad0 (base - 0x2DB8)
rtoc: 0x09001000a0990cb8
|---stackaddr----| |----lrsave------|: <function name>
0x000000011456c220 - 0x0900000006965080 libjvm.so::_ZN2os27platform_print_native_stackEP12outputStreamPvPci+0x20 (C++ saves_lr stores_bc fixedparms:4 )
0x000000011456c290 - 0x090000000696bc20 libjvm.so::_ZN7VMError6reportEP12outputStreamb+0x2020 (C++ saves_lr stores_bc gpr_saved:10 fixedparms:2 )
0x000000011456cd10 - 0x090000000696eda4 libjvm.so::_ZN7VMError14report_and_dieEiPKcS1_PcP6ThreadPhPvS6_S1_im+0x2c4 (C++ saves_cr saves_lr stores_bc gpr_saved:18 fixedparms:8 )
0x000000011456d050 - 0x0900000006970308 libjvm.so::_ZN7VMError14report_and_dieEP6ThreadPvPKciS4_S4_Pc+0x48 (C++ saves_lr stores_bc fixedparms:7 )
0x000000011456d0e0 - 0x0900000006420f94 libjvm.so::_Z15report_vm_errorPKciS0_S0_z+0x114 (C++ saves_lr stores_bc gpr_saved:6 fixedparms:8 parmsonstk:1)
0x000000011456d180 - 0x09000000077708c8 libjvm.so::_ZNK23WeakProcessorPhaseTimes14total_time_secEv+0x48 (C++ fp_present saves_lr stores_bc gpr_saved:1 fixedparms:1 )
0x000000011456d200 - 0x0900000007762ed4 libjvm.so::_ZNK14G1GCPhaseTimes34print_post_evacuate_collection_setEv+0x74 (C++ fp_present saves_lr stores_bc fpr_saved:4 gpr_saved:6 fixedparms:1 )
0x000000011456d580 - 0x0900000007763a58 libjvm.so::_ZN14G1GCPhaseTimes5printEv+0x1b8 (C++ fp_present saves_lr stores_bc fpr_saved:4 gpr_saved:3 fixedparms:1 )
0x000000011456d6b0 - 0x0900000007749c54 libjvm.so::_ZN8G1Policy12print_phasesEv+0x14 (C++ saves_lr stores_bc fixedparms:1 )
0x000000011456d720 - 0x0900000006d72638 libjvm.so::_ZN15G1CollectedHeap32do_collection_pause_at_safepointEd+0xab8 (C++ fp_present saves_lr stores_bc fpr_saved:2 gpr_saved:18 fixedparms:1 floatparms:1 )
0x000000011456de10 - 0x0900000007907434 libjvm.so::_ZN25VM_G1CollectForAllocation4doitEv+0x174 (C++ fp_present saves_lr stores_bc gpr_saved:6 fixedparms:1 )
0x000000011456dec0 - 0x09000000068cf438 libjvm.so::_ZN12VM_Operation8evaluateEv+0x1d8 (C++ saves_lr stores_bc gpr_saved:5 fixedparms:1 )
0x000000011456e100 - 0x0900000006936e30 libjvm.so::_ZN8VMThread18evaluate_operationEP12VM_Operation+0x110 (C++ saves_lr stores_bc gpr_saved:3 fixedparms:2 )
0x000000011456e200 - 0x0900000006935e2c libjvm.so::_ZN8VMThread4loopEv+0x44c (C++ fp_present saves_lr stores_bc fpr_saved:2 gpr_saved:18 fixedparms:1 )
0x000000011456e500 - 0x09000000069358d8 libjvm.so::_ZN8VMThread3runEv+0x358 (C++ saves_lr stores_bc gpr_saved:4 fixedparms:1 )
0x000000011456e5d0 - 0x09000000066a66a0 libjvm.so::_ZN6Thread8call_runEv+0x120 (C++ saves_lr stores_bc gpr_saved:5 fixedparms:1 )
0x000000011456e690 - 0x0900000006438414 libjvm.so::_ZL19thread_native_entryP6Thread+0x274 (C++ uses_alloca saves_lr stores_bc gpr_saved:12 fixedparms:1 )
0x000000011456e7a0 - 0x090000000054dfec libpthreads.a::_pthread_body+0xec (C saves_lr stores_bc gpr_saved:1 fixedparms:1 )
0x000000011456e820 - 0x0000000000000000
*** end of backchain ***
-----------------------
VM_Operation (0x0000000117347150): G1CollectForAllocation, mode: safepoint, requested by thread 0x000000011712f800
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/nightly/jdk/src/hotspot/share/gc/shared/weakProcessorPhaseTimes.cpp:136), pid=10879466, tid=1800
# assert(is_initialized_time(_total_time_sec)) failed: Total time not set: -0.000548
#
# JRE version: OpenJDK Runtime Environment (14.0.1) (fastdebug build 14.0.0.1-internal+0-adhoc.openjdk.jdk)
# Java VM: OpenJDK 64-Bit Server VM (fastdebug 14.0.0.1-internal+0-adhoc.openjdk.jdk, mixed mode, tiered, compressed oops, g1 gc, aix-ppc64)
# Core dump will be written. Default location: /jtreg_langtools_work/JTwork/jdk/javadoc/doclet/testSearchScript/TestSearchScript/core or core.10879466
#
# If you would like to submit a bug report, please visit:
# http://bugreport.java.com/bugreport/crash.jsp
#
--------------- S U M M A R Y ------------
Command Line: -Dtest.src=/testdata/jtreg/jtreg_test_14/test/langtools/jdk/javadoc/doclet/testSearchScript -Dtest.src.path=/testdata/jtreg/jtreg_test_14/test/langtools/jdk/javadoc/doclet/testSearchScript:/testdata/jtreg/jtreg_test_14/test/langtools/jdk/javadoc/lib -Dtest.classes=/jtreg_langtools_work/JTwork/classes/jdk/javadoc/doclet/testSearchScript/TestSearchScript.d -Dtest.class.path=/jtreg_langtools_work/JTwork/classes/jdk/javadoc/doclet/testSearchScript/TestSearchScript.d:/jtreg_langtools_work/JTwork/classes/jdk/javadoc/lib -Dtest.vm.opts=-Xmx768m -Djava.awt.headless=true -Djava.util.prefs.userRoot=/jtreg_langtools_work/tmp -Djava.io.tmpdir=/jtreg_langtools_work/tmp -ea -esa -Dtest.tool.vm.opts=-J-Xmx768m -J-Djava.awt.headless=true -J-Djava.util.prefs.userRoot=/jtreg_langtools_work/tmp -J-Djava.io.tmpdir=/jtreg_langtools_work/tmp -J-ea -J-esa -Dtest.compiler.opts= -Dtest.java.opts= -Dtest.jdk=/sapjvm_14 -Dcompile.jdk=/sapjvm_14 -Dtest.timeout.factor=6.0 -Dtest.root=/testdata/jtreg/jtreg_test_14/test/langtools -Dtest.modules=jdk.javadoc/jdk.javadoc.internal.tool -Dtest.nativepath=/testdata/jtreg/jtreg_test_14/test/jdk/jtreg/native --add-modules=jdk.javadoc --add-exports=jdk.javadoc/jdk.javadoc.internal.tool=ALL-UNNAMED -Xmx768m -Djava.awt.headless=true -Djava.util.prefs.userRoot=/jtreg_langtools_work/tmp -Djava.io.tmpdir=/jtreg_langtools_work/tmp -ea -esa -Djava.library.path=/testdata/jtreg/jtreg_test_14/test/jdk/jtreg/native com.sun.javatest.regtest.agent.MainWrapper /jtreg_langtools_work/JTwork/jdk/javadoc/doclet/testSearchScript/TestSearchScript.d/main.1.jta
Host: is3439, unknown, 32 cores, 64G, 2 7
Time: Mon Sep 16 00:32:02 2019 CEST elapsed time: 13 seconds (0d 0h 0m 13s)
--------------- T H R E A D ---------------
Current thread (0x000000011433c000): VMThread "VM Thread" [stack: 0x0000000114350000,0x000000011456e888] [id=1800]
Stack: [0x0000000114350000,0x000000011456e888], sp=0x000000011456d040, free space=2164k
No context given, using current context.
------ current frame:
iar: 0x09000000066554f4 libjvm.so::_ZN18AixNativeCallstack27print_callstack_for_contextEP12outputStreamPK10ucontext_tbPcm+0x954 (C++ saves_lr stores_bc gpr_saved:18 fixedparms:5 )
lr: 0x000000010074cada (unknown module)::(unknown function)+?
sp: 0x000000011456bad0 (base - 0x2DB8)
rtoc: 0x09001000a0990cb8
|---stackaddr----| |----lrsave------|: <function name>
0x000000011456c220 - 0x0900000006965080 libjvm.so::_ZN2os27platform_print_native_stackEP12outputStreamPvPci+0x20 (C++ saves_lr stores_bc fixedparms:4 )
0x000000011456c290 - 0x090000000696bc20 libjvm.so::_ZN7VMError6reportEP12outputStreamb+0x2020 (C++ saves_lr stores_bc gpr_saved:10 fixedparms:2 )
0x000000011456cd10 - 0x090000000696eda4 libjvm.so::_ZN7VMError14report_and_dieEiPKcS1_PcP6ThreadPhPvS6_S1_im+0x2c4 (C++ saves_cr saves_lr stores_bc gpr_saved:18 fixedparms:8 )
0x000000011456d050 - 0x0900000006970308 libjvm.so::_ZN7VMError14report_and_dieEP6ThreadPvPKciS4_S4_Pc+0x48 (C++ saves_lr stores_bc fixedparms:7 )
0x000000011456d0e0 - 0x0900000006420f94 libjvm.so::_Z15report_vm_errorPKciS0_S0_z+0x114 (C++ saves_lr stores_bc gpr_saved:6 fixedparms:8 parmsonstk:1)
0x000000011456d180 - 0x09000000077708c8 libjvm.so::_ZNK23WeakProcessorPhaseTimes14total_time_secEv+0x48 (C++ fp_present saves_lr stores_bc gpr_saved:1 fixedparms:1 )
0x000000011456d200 - 0x0900000007762ed4 libjvm.so::_ZNK14G1GCPhaseTimes34print_post_evacuate_collection_setEv+0x74 (C++ fp_present saves_lr stores_bc fpr_saved:4 gpr_saved:6 fixedparms:1 )
0x000000011456d580 - 0x0900000007763a58 libjvm.so::_ZN14G1GCPhaseTimes5printEv+0x1b8 (C++ fp_present saves_lr stores_bc fpr_saved:4 gpr_saved:3 fixedparms:1 )
0x000000011456d6b0 - 0x0900000007749c54 libjvm.so::_ZN8G1Policy12print_phasesEv+0x14 (C++ saves_lr stores_bc fixedparms:1 )
0x000000011456d720 - 0x0900000006d72638 libjvm.so::_ZN15G1CollectedHeap32do_collection_pause_at_safepointEd+0xab8 (C++ fp_present saves_lr stores_bc fpr_saved:2 gpr_saved:18 fixedparms:1 floatparms:1 )
0x000000011456de10 - 0x0900000007907434 libjvm.so::_ZN25VM_G1CollectForAllocation4doitEv+0x174 (C++ fp_present saves_lr stores_bc gpr_saved:6 fixedparms:1 )
0x000000011456dec0 - 0x09000000068cf438 libjvm.so::_ZN12VM_Operation8evaluateEv+0x1d8 (C++ saves_lr stores_bc gpr_saved:5 fixedparms:1 )
0x000000011456e100 - 0x0900000006936e30 libjvm.so::_ZN8VMThread18evaluate_operationEP12VM_Operation+0x110 (C++ saves_lr stores_bc gpr_saved:3 fixedparms:2 )
0x000000011456e200 - 0x0900000006935e2c libjvm.so::_ZN8VMThread4loopEv+0x44c (C++ fp_present saves_lr stores_bc fpr_saved:2 gpr_saved:18 fixedparms:1 )
0x000000011456e500 - 0x09000000069358d8 libjvm.so::_ZN8VMThread3runEv+0x358 (C++ saves_lr stores_bc gpr_saved:4 fixedparms:1 )
0x000000011456e5d0 - 0x09000000066a66a0 libjvm.so::_ZN6Thread8call_runEv+0x120 (C++ saves_lr stores_bc gpr_saved:5 fixedparms:1 )
0x000000011456e690 - 0x0900000006438414 libjvm.so::_ZL19thread_native_entryP6Thread+0x274 (C++ uses_alloca saves_lr stores_bc gpr_saved:12 fixedparms:1 )
0x000000011456e7a0 - 0x090000000054dfec libpthreads.a::_pthread_body+0xec (C saves_lr stores_bc gpr_saved:1 fixedparms:1 )
0x000000011456e820 - 0x0000000000000000
*** end of backchain ***
-----------------------
VM_Operation (0x0000000117347150): G1CollectForAllocation, mode: safepoint, requested by thread 0x000000011712f800
- backported by
-
JDK-8234075 Asserts on AIX because os::elapsed_counter() is not monotonic
-
- Resolved
-