8231457: Asserts on AIX because os::elapsed_counter() is not monotonic

Replace gettimeofday with javaTimeNanos

Reviewed-by: dholmes, stuefe